# Ground-plane-removal

./: CMakeLists.txt  README.md  package.xml
include/: DelphiSeg.h
src/: main.cpp
